--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="desafio Webedia">
  
-  <title>Desafio Webedia</title>
+  <title>Desafio Webedia Daniela</title>
 
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
